--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
                 </div>
             </div>
 
-            <div class="text-center text-xs text-gray-500 dark:text-gray-400 border-t border-b border-dashed dark:border-gray-700 py-2">
-                <p>Toda la información se guarda <strong>localmente en tu navegador</strong> y no se comparte con ningún servidor. Tu privacidad está asegurada.</p>
-            </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-4 border-t border-gray-200 dark:border-gray-700 pt-4">
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-4 border-t border-gray-200 dark:border-gray-700 pt-4">
                 
                 <div class="lg:col-span-2 p-3 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
                     <h3 class="font-semibold text-sm mb-2 text-gray-600 dark:text-gray-400">Acciones de Tabla</h3>
@@ -131,6 +128,10 @@
 
             <div id="pagination-controls-bottom" class="flex justify-center items-center gap-4 mt-4"></div>
         </main>
+        <footer class="text-center text-xs text-gray-500 dark:text-gray-400 mt-6 pb-2">
+            <p>Toda la información se guarda <strong>localmente en tu navegador</strong> y no se comparte con ningún servidor. Tu privacidad está asegurada.</p>
+        </footer>
+    </div>
     </div>
 
     <div id="template-modal" class="modal fixed inset-0 bg-black bg-opacity-50 items-center justify-center p-4 z-40"></div>
@@ -153,3 +154,4 @@
 </body>
 
 </html>
+
