--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div id="pagination-controls-bottom" class="flex justify-center items-center gap-4 mt-4"></div>
         </main>
         <footer class="text-center text-xs text-gray-500 dark:text-gray-400 mt-6 pb-2">
-            <p>Toda la información se guarda <strong>localmente en tu navegador</strong> y no se comparte con ningún servidor. Tu privacidad está asegurada.</p>
+            <p>Toda la información se guarda <strong>localmente en tu navegador</strong> y no se comparte con ningún servidor.</p>
         </footer>
     </div>
     </div>
@@ -154,4 +154,5 @@
 </body>
 
 </html>
+
 
